--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ AlgoPractise/obj/AlgoPractise.csproj.nuget.dgspec.json
 AlgoPractise/obj/Debug/netcoreapp3.1/AlgoPractise.csproj.FileListAbsolute.txt
 AlgoPractise/obj/project.assets.json
 AlgoPractise/obj/Debug/netcoreapp3.1/AlgoPractise.AssemblyInfo.cs
+.vs/AlgoPractise/DesignTimeBuild/.dtbcache
