--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ AlgoPractise/obj/Debug/netcoreapp3.1/AlgoPractise.csproj.FileListAbsolute.txt
 AlgoPractise/obj/project.assets.json
 AlgoPractise/obj/Debug/netcoreapp3.1/AlgoPractise.AssemblyInfo.cs
 .vs/AlgoPractise/DesignTimeBuild/.dtbcache
+AlgoPractise/AlgoPractise.csproj
