--- a/AlgoPractise/AlgoPractise.csproj
+++ b/AlgoPractise/AlgoPractise.csproj
@@ -3,10 +3,15 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+     <!-- <GenerateProgramFile>false</GenerateProgramFile> -->
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
+    <!-- <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0"/> -->
+    <PackageReference Include="NUnit" Version="3.8.1"/>
+    <PackageReference Include="NUnit.Console" Version="3.7.0"/>
+    <PackageReference Include="NUnit3TestAdapter" Version="3.8.0" />
   </ItemGroup>
 
 </Project>
