--- a/AlgoPractise/AlgoPractise.csproj
+++ b/AlgoPractise/AlgoPractise.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="NUnit3TestAdapter" Version="3.8.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="01. Design Principles\" />
+  </ItemGroup>
+
 </Project>
