--- a/AlgoPractise/AlgoPractise.csproj
+++ b/AlgoPractise/AlgoPractise.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
      <!-- <GenerateProgramFile>false</GenerateProgramFile> -->
   </PropertyGroup>
 
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <Folder Include="01. Design Principles\" />
+    <Folder Include="04. AlgorithmDS\Sorting\Problems\" />
   </ItemGroup>
 
 </Project>
