--- a/AlgoPractise/AlgoPractise.csproj
+++ b/AlgoPractise/AlgoPractise.csproj
@@ -7,15 +7,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="03. CSharp\Properties\**" />
+    <EmbeddedResource Remove="03. CSharp\Properties\**" />
+    <None Remove="03. CSharp\Properties\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
     <!-- <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0"/> -->
     <PackageReference Include="NUnit" Version="3.8.1" />
     <PackageReference Include="NUnit.Console" Version="3.7.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.8.0" />
+    <PackageReference Include="xunit.extensibility.core" Version="2.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="01. Design Principles\" />
+    <Folder Include="04. AlgorithmDS\MakeYourOwnDS\" />
     <Folder Include="04. AlgorithmDS\Sorting\Problems\" />
   </ItemGroup>
 
